--- a/ContactListApi/Views/Shared/_Layout.cshtml
+++ b/ContactListApi/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2020 - ContactListApi</p>
+            <p>&copy; 2020 - Contact List Api | Develop By-<a href="#">James Murphy</a></p>
         </footer>
     </div>
 
