--- a/ContactListApi/Views/Shared/_Layout.cshtml
+++ b/ContactListApi/Views/Shared/_Layout.cshtml
@@ -31,13 +31,13 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="ContactList" asp-action="Index">Contact List</a></li>
+                    <li><a asp-area="" asp-controller="ContactList" asp-action="Index">Contact Lists</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <partial name="_CookieConsentPartial" />
+    @*<partial name="_CookieConsentPartial" />*@
 
     <div class="container body-content">
         @RenderBody()
