--- a/ContactListApi/Views/ContactList/Index.cshtml
+++ b/ContactListApi/Views/ContactList/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Contact List";
     int sl = 1;
 }
-<div class="jumbotron">
+<div class="jumbotron" style="padding-top:10px;">
     <div class="row">
         <div class="col-md-12">
             <h2>Contact Lists</h2>
@@ -14,8 +14,8 @@
         <div class="col-md-12">
             @if (Model.Any())
             {
-                <a href="#" class="btn btn-sm btn-primary">Create new contact</a>
-                <table width="100%">
+                <a href="#" class="btn btn-sm btn-primary" style="margin-bottom:5px;">Create new contact</a>
+                <table class="table table-sm table-striped table-bordered table-hover">
                     <thead>
                         <tr>
                             <th>SL</th>
@@ -42,7 +42,7 @@
                                 <td>@item.City</td>
                                 <td>@item.Country</td>
                                 <td>
-                                    <a href="#" class="">Edit</a>
+                                    <a href="#" class="">Edit</a> | 
                                     <a href="#" class="">Delete</a>
                                 </td>
                             </tr>
