--- a/ContactListApi/Views/Test/Delete.cshtml
+++ b/ContactListApi/Views/Test/Delete.cshtml
@@ -2,12 +2,14 @@
 
 @{
     ViewData["Title"] = "Delete";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete Contact</h2>
+<h2>Delete</h2>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
+    <h4>ContactListItem</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -59,7 +61,7 @@
             @Html.DisplayFor(model => model.Country)
         </dd>
     </dl>
-
+    
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
