--- a/ContactListApi/Views/Test/Details.cshtml
+++ b/ContactListApi/Views/Test/Details.cshtml
@@ -1,13 +1,14 @@
 ﻿@model ContactListApi.Models.ContactListItem
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Delete Contact</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
+    <h4>ContactListItem</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -59,10 +60,8 @@
             @Html.DisplayFor(model => model.Country)
         </dd>
     </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+</div>
+<div>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="Index">Back to List</a>
 </div>
