--- a/ContactListApi/Views/Test/Delete.cshtml
+++ b/ContactListApi/Views/Test/Delete.cshtml
@@ -64,7 +64,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-danger" style="width:200px;" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
